--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,13 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+ /* Tablet View */
+
+ @media (max-width:768px){
+    .container{
+        max-width: 768px;
+    }
+
+ }
