--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,32 @@ img {
     }
 
  }
+
+
+ /* Mobile View */
+
+ @media (max-width:480px){
+    .container{
+        max-width: 480px;
+    }
+
+    .row{
+        flex-wrap: wrap;
+    }
+
+    .col-right{
+        width: 100%;
+    }
+
+    .col-left{
+        width: 100%;
+    }
+
+    .steps .col,
+    .lessons .col,
+    .why-us .col{
+        width: 100%;
+    }
+
+ 
+ }
